# uftrace

./: .clang-format  .clang-tidy  .codespell_ignore  .gdbinit  .gitignore  .packit.yaml  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  INSTALL  INSTALL.md  Makefile  Makefile.include  NEWS  NEWS.md  README.md  TODO  audit.c  autoargs.h  cmd-dump.c  cmd-dynamic.c  cmd-graph.c  cmd-info.c  cmd-live.c  cmd-record.c  cmd-recv.c  cmd-replay.c  cmd-report.c  cmd-script.c  cmd-tui.c  configure  cygprofile-nop.c  cygprofile.c  debug-mcount.cmd  debug.c  debug.sh  entry.S  fentry.S  filter.c  ftrace.c  (+20 more)
.github/workflows/: nightly-test.yml  on-demand-test.yml  pr-test.yml  push-test.yml
arch/aarch64/: Makefile  cpuinfo.c  dynamic.S  fentry.S  mcount-arch.h  mcount-dynamic.c  mcount-insn.c  mcount-support.c  mcount.S  plthook.S  regs.c
arch/arm/: Makefile  cpuinfo.c  dynamic.S  mcount-arch.h  mcount-dynamic.c  mcount-insn.c  mcount-support.c  mcount.S  plthook.S  regs.c
arch/i386/: Makefile  common.S  common.c  cpuinfo.c  fentry.S  mcount-arch.h  mcount-dynamic.c  mcount-support.c  mcount.S  plthook.S  regs.c
arch/riscv64/: Makefile  cpuinfo.c  dynamic.S  mcount-arch.h  mcount-dynamic.c  mcount-support.c  mcount.S  plthook.S
arch/x86_64/: Makefile  common.c  dynamic.S  dynamic_hook.S  fentry.S  inject-content.S  inject.c  mcount-arch.h  mcount-dynamic.c  mcount-event.c  mcount-insn.c  mcount-noplt.c  mcount-plthook.c  mcount-support.c  mcount.S  plthook.S  regs.c  symbol.c  x64_modrm.c  x64_modrm.h  xray.S
argp/: Makefile.am  Versions  acinclude.m4  argp-eexst.c  argp-fmtstream.h  argp-help.c  argp-parse.c  argp-test.c  argp.h  configure.ac  mempcpy.c  strchrnul.c  strndup.c
argp/testsuite/: Makefile.am  ex1.c  ex3.c  ex4.c
check-deps/: Makefile  Makefile.check  __arm_has_hardfp.c  __cc_has_mgeneral_regs_only.c  __cc_has_mno_sse2.c  __cxa_demangle.c  __have_libbabeltrace_ctf.c  __have_libcapstone.c  __have_libdw.c  __have_libelf.c  __have_liblttng.c  __have_liblttng.h  __have_libluajit.c  __have_liblzma.c  __have_libncurses.c  __have_libpython2.7.c  __have_libpython3.8_.c  __have_libpython3.c  __have_libtraceevent.c  __have_libunwind.c  __have_membarrier.c  __have_posix_shm.c  __have_strcoll.c  __have_strverscmp.c  __have_versionsort.c  __perf_clockid.c  __perf_context_switch.c
cmds/: client.c  dump.c  graph.c  info.c  live.c  record.c  recv.c  replay.c  report.c  script.c  tui.c
config/: Makefile  Makefile.check  Makefile.include  check-clock_without_librt.c  check-libiberty.c  check-libiberty_demangle.c
debian/: changelog  control  copyright  gbp.conf  rules  source.lintian-overrides  uftrace.bash-completion  uftrace.docs  uftrace.install  uftrace.lintian-overrides  uftrace.manpages  watch
debian/patches/: 0001-correct-minor-spelling-errors.patch  0001-fix-size-calcs.patch  0001-suppress-unittest-colored-output-with-define.patch  0002-Fix-some-minor-spelling-errors-in-manpages.diff  0002-Fix-some-minor-spelling-errors-in-manpages.patch  0002-arm-Fix-segfault-by-adjusting-with-map-start-address.patch  0002-build-unittests-with-no-pie.patch  0003-fix-more-spelling-issues-found-by-lintian.diff  series
debian/pbuilder-hooks/: B50lintian  C10shell
debian/source/: options
debian/tests/: control
doc/: Makefile  dictionary.txt  ftrace-info.md  ftrace-live.md  ftrace-record.md  ftrace-recv.md  ftrace-replay.md  ftrace-report.md  ftrace.md  run-spell.sh  uftrace-client.md  uftrace-dump.md  uftrace-graph.md  uftrace-info.md  uftrace-live.md  uftrace-record.md  uftrace-recv.md  uftrace-replay.md  uftrace-report.md  uftrace-script.md  uftrace-test.md  uftrace-tui.md  uftrace.html  uftrace.md
doc/ko/: CONTRIBUTING.md  INSTALL.md  Makefile  README.md  uftrace-dump.md  uftrace.md  (+9 more)
include/: uftrace.h
libmcount/: agent.c  dynamic.c  dynamic.h  event.c  internal.h  lttng-tp.h  mcount-dynamic.c  mcount-nop.c  mcount.c  mcount.h  misc.c  plthook.c  pmu.c  pyhook.c  pyhook.h  record.c  script.c  script.h  trigger.c  wrap.c
libtraceevent/: .gitignore  Makefile  event-parse.c  event-parse.h  event-plugin.c  event-utils.h  kbuffer-parse.c  kbuffer.h  parse-filter.c  trace-seq.c
misc/: Makefile  apply-patch.sh  bash-completion.sh  bench.c  bench.sh  checkout-pr.sh  dbginfo.c  debug-mcount.cmd  debug.sh  demangler.c  gen-auto-args-list.py  gen-autoargs.py  gen-compile-commands.py  get-pr.sh  install-deps.sh  install-elfutils.sh  prototypes.h  run-lcov.sh  symbols.c  trace-python.c  trace-python2.c  trace-python3.c  ubuntu-install-deps.sh  uftrace.py  version.sh  wget-pr.sh
python/: trace-python.c  uftrace.py
scripts/: Makefile  arg.py  count.c  count.lua  count.py  dump-firefox.py  dump-perfetto.py  dump.c  dump.lua  dump.py  func-histogram.py  func-percentile.py  info.c  info.lua  info.py  main_errono.py  malloc-free.py  replay.lua  replay.py  report-libcall.py  report-open-files.py  retval-histogram.py  simple.c  simple.cpp  simple.lua  simple.py  strings.lua  strings.py  trace-memcpy.lua  trace-memcpy.py
subprojects/: .gitignore  libresolver.wrap
tests/: .gitignore  Makefile  abc.c  abcd.c  arg-struct-reference.c  arg-struct.c  arg.c  arg_struct  arg_struct_ref  demangle.cpp  fentry.c  fork.c  local.c  mymod.py  p001_basic.py  p002_filter_F.py  p003_filter_N.py  p004_filter_FN.py  p005_srcline.py  p006_filter_time.py  p007_filter_depth.py  p008_file_var.py  p009_libcall_single.py  p010_libcall_none.py  p011_libcall_nested.py  p012_os_exit.py  pint  r001_basic.py  runtest.py  s-abc-exit.py  s-abc.c  s-abc.py  s-abc.rs  s-agent.c  s-alloca.c  s-allocfree.c  s-arg-oct.c  s-arg.c  s-autoargs.c  s-backtrace.cpp  (+440 more)
utils/: arch.h  argspec.c  argspec.h  asm.h  auto-args-list.h  auto-args.c  auto-args.h  compiler.h  ctf-writer.c  ctf-writer.h  data-file.c  debug.c  demangle-rust.c  demangle.c  demangle.h  dwarf.c  dwarf.h  env-file.c  env-file.h  event.c  event.h  extern.c  field.c  field.h  filter.c  filter.h  fstack.c  fstack.h  gnu.h  graph.c  graph.h  hashmap.c  hashmap.h  inject-utils.c  inject-utils.h  inject.c  inject.h  kernel-parser.c  kernel-parser.h  kernel.c  (+41 more)
(+39 files in other folders)
